-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 24, 25
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8378300 | 25.0.3 | William Kemper | P4 | Resolved | Fixed | b04 |
The free threshold heuristic looks at the (hard) max heap size, which causes it to trigger too late when `SoftMaxHeapSize` has been configured below the max heap size.
- backported by
-
JDK-8378300 Shenandoah: Free threshold heuristic does not use SoftMaxHeapSize
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk25u-dev/5cac27d8
-
Commit(master)
openjdk/jdk/974ad4e8
-
Commit(master)
openjdk/shenandoah-jdk21u/6991ee24
-
Review(master)
openjdk/jdk25u-dev/195
-
Review(master)
openjdk/jdk/26199
-
Review(master)
openjdk/shenandoah-jdk21u/205
(2 links to)