8359868: Shenandoah: Free threshold heuristic does not use SoftMaxHeapSize

Reviewed-by: wkemper